--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,7 @@ optimizer = true
 optimizer_runs = 9_999_999
 
 remappings = [
-  "@forge=lib/forge-std/src/"
+  "@forge=lib/forge-std/src"
 ]
 
 [rpc_endpoints]
