--- a/foundry.toml
+++ b/foundry.toml
@@ -9,4 +9,8 @@ remappings = [
 ]
 
 [rpc_endpoints]
-mainnet = "https://rpc.ankr.com/eth"
+main = "https://rpc.ankr.com/eth"
+base = "https://rpc.ankr.com/base"
+poly = "https://rpc.ankr.com/polygon"
+opti = "https://rpc.ankr.com/optimism"
+arbi = "https://rpc.ankr.com/arbitrum"
