--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,11 @@
+# The Default Profile
 [profile.default]
-solc = "0.8.19"
+solc_version = "0.8.21"
+evm_version = "paris" # Shanghai will be tested in the CI.
+auto_detect_solc = false
 optimizer = true
-optimizer_runs = 9_999_999
+optimizer_runs = 1_000
+gas_limit = 100_000_000 # ETH is 30M, but we use a higher value.
 
 remappings = [
   "@forge=lib/forge-std/src/",
@@ -12,6 +16,9 @@ remappings = [
 line_length = 100 # While we allow up to 120, we lint at 100 for readability.
 quote_style = 'single'
 int_types = 'short'
+
+[profile.via-ir]
+via_ir = true
 
 [rpc_endpoints]
 main = "https://rpc.ankr.com/eth"
