--- a/foundry.toml
+++ b/foundry.toml
@@ -9,7 +9,8 @@ gas_limit = 100_000_000 # ETH is 30M, but we use a higher value.
 
 remappings = [
   "@forge=lib/forge-std/src/",
-  "@solady=lib/solady/"
+  "@solady=lib/solady/",
+  "@aa=lib/account-abstraction/contracts/"
 ]
 
 [fmt]
