--- a/foundry.toml
+++ b/foundry.toml
@@ -10,7 +10,8 @@ gas_limit = 100_000_000 # ETH is 30M, but we use a higher value.
 remappings = [
   "@forge=lib/forge-std/src/",
   "@solady=lib/solady/",
-  "@aa=lib/account-abstraction/contracts/"
+  "@aa=lib/account-abstraction/contracts/",
+  "@openzeppelin=lib/openzeppelin-contracts/"
 ]
 
 [fmt]
