--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "wallet",
     "version": "1.0",
-    "description": "Minimalist EIP-4337 Wallet",
+    "description": "Mini EIP-4337 Wallet",
     "main": "index.js",
     "repository": {
       "type": "git",
