--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "name": "My Codespace",
     "image": "mcr.microsoft.com/devcontainers/rust:latest",
-	"postCreateCommand": "curl -L https://foundry.paradigm.xyz | bash &&  source ~/.bashrc && foundryup",
+	"postStartCommand": "curl -L https://foundry.paradigm.xyz | bash &&  source ~/.bashrc && foundryup",
 	"customizations": {
 		"vscode": {
 			"extensions": [
