--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,7 @@ solc_version = "0.8.21"
 evm_version = "paris" # Shanghai will be tested in the CI.
 auto_detect_solc = false
 optimizer = true
-optimizer_runs = 1_000
+optimizer_runs = 9999999
 gas_limit = 100_000_000 # ETH is 30M, but we use a higher value.
 
 remappings = [
